add: lot filtering
